re-shuffling workspace resources more appropriately

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/workspace/workspace.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/workspace/workspace.html
@@ -1,4 +1,16 @@
-<!-- <div id="content" ng-include="'templates/workspace.html'"></div> -->
+<style>
+	#editor {
+		border: 1px solid #ddd;
+		height: 40rem;
+		margin-bottom: 3rem;
+	}
+	#editor-toolbar {
+		background-color: #ddd;
+		padding: 1.3rem;
+		border-top-left-radius: 4px;
+		border-top-right-radius: 4px;
+	}
+</style>
 <div ng-controller="WorkspaceListCtrl" class="container-fluid">
 	<div class="row">
 		<div class="col-xs-18 collapse in" id="left">
