--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/styles/custom.css
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/styles/custom.css
@@ -43,3 +43,150 @@ body {
 code {
   font-size: 80%;
 }
+.huge {
+    font-size: 25px;
+}
+
+.panel-green {
+    border-color: #5cb85c;
+}
+
+.panel-green .panel-heading {
+    border-color: #5cb85c;
+    color: #fff;
+    background-color: #5cb85c;
+}
+
+.panel-green a {
+    color: #5cb85c;
+}
+
+.panel-green a:hover {
+    color: #3d8b3d;
+}
+
+.panel-red {
+    border-color: #d9534f;
+}
+
+.panel-red .panel-heading {
+    border-color: #d9534f;
+    color: #fff;
+    background-color: #d9534f;
+}
+
+.panel-red a {
+    color: #d9534f;
+}
+
+.panel-red a:hover {
+    color: #b52b27;
+}
+
+.panel-yellow {
+    border-color: #f0ad4e;
+}
+
+.panel-yellow .panel-heading {
+    border-color: #f0ad4e;
+    color: #fff;
+    background-color: #f0ad4e;
+}
+
+.panel-yellow a {
+    color: #f0ad4e;
+}
+
+.panel-yellow a:hover {
+    color: #df8a13;
+}
+
+.panel-blue {
+    border-color: #337ab7;
+}
+
+.panel-blue .panel-heading {
+    border-color: #337ab7;
+    color: #fff;
+    background-color: #337ab7;
+}
+
+.panel-blue a {
+    color: #337ab7;
+}
+
+.panel-blue a:hover {
+    color: #df8a13;
+}
+
+.panel-purple {
+    border-color: #b49cfc;
+}
+
+.panel-purple .panel-heading {
+    border-color: #b49cfc;
+    color: #fff;
+    background-color: #b49cfc;
+}
+
+.panel-purple a {
+    color: #b49cfc;
+}
+
+.panel-purple a:hover {
+    color: #df8a13;
+}
+
+.panel-orange {
+    border-color: #e67100;
+}
+
+.panel-orange .panel-heading {
+    border-color: #e67100;
+    color: #fff;
+    background-color: #e67100;
+}
+
+.panel-orange a {
+    color: #e67100;
+}
+
+.panel-orange a:hover {
+    color: #df8a13;
+}
+
+.panel-lila {
+    border-color: #7575a3;
+}
+
+.panel-lila .panel-heading {
+    border-color: #7575a3;
+    color: #fff;
+    background-color: #7575a3;
+}
+
+.panel-lila a {
+    color: #7575a3;
+}
+
+.panel-lila a:hover {
+    color: #df8a13;
+}
+
+.panel-lblue {
+    border-color: #5f9dd3;
+}
+
+.panel-lblue .panel-heading {
+    border-color: #5f9dd3;
+    color: #fff;
+    background-color: #5f9dd3;
+}
+
+.panel-lblue a {
+    color: #5f9dd3;
+}
+
+.panel-lblue a:hover {
+    color: #df8a13;
+}
