--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/home.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/home.html
@@ -1,4 +1,4 @@
-<div class="row text-center">
+<!-- <div class="row text-center">
 	<div class="col-lg-4 col-md-6 hero-feature" ng-repeat="data in homeData">
 		<a class="thumbnail btn btn-default"
 			href="{{ data.path }}" target="{{ getTarget(data); }}">
@@ -9,4 +9,29 @@
 			</div>
 		</a>
 	</div>
+</div> -->
+
+
+<div class="col-lg-3 col-md-6" ng-repeat="data in homeData">
+    <div class="panel panel-{{ data.color }}" style="height: 150px">
+        <div class="panel-heading" style="height: 97px">
+            <div class="row">
+                <div class="col-xs-3">
+                    <i class="fa fa-{{ data.image }} fa-4x"></i>
+                </div>
+                <div class="col-xs-9 text-right">
+                    <div class="huge">{{ data.title }}</div>
+                    <div>{{ data.description }}</div>
+                </div>
+            </div>
+        </div>
+        <a class="thumbnail btn btn-default"
+			href="{{ data.path }}" target="{{ getTarget(data); }}">
+            <div class="panel-footer">
+                <span class="pull-left">More...</span>
+                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                <div class="clearfix"></div>
+            </div>
+        </a>
+    </div>
 </div>
