--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/home.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/home.html
@@ -29,7 +29,7 @@
 			href="{{ data.path }}" target="{{ getTarget(data); }}">
             <div class="panel-footer">
                 <span class="pull-left">More...</span>
-                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                <span class="pull-right"><i class="fa fa-arrow-circle-right fa-2x"></i></span>
                 <div class="clearfix"></div>
             </div>
         </a>
