--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/develop/develop.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/develop/develop.html
@@ -1,12 +1,12 @@
  
  	<div class="row">
 		<div class="col-lg-12">
-	    	<h1 class="page-header">Monitor</h1>
+	    	<h1 class="page-header">Develop</h1>
 		</div>
 	</div>
 
  
-    <div class="col-lg-4 col-md-6" ng-repeat="data in monitoringData">
+    <div class="col-lg-4 col-md-6" ng-repeat="data in developData">
         <div class="panel panel-{{ data.color }}">
             <div class="panel-heading">
                 <div class="row">
@@ -33,22 +33,22 @@
 	        <div class="col-lg-4 heading-lead page-scroll">
 				<hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-	            <h2><i class="fa fa-wrench fa-fw"></i>
-                Manage Location</h2>
-	            <p>Register the locations to which the statistics shall be collected.</p>
+	            <h2><i class="fa fa-laptop fa-fw"></i>
+                Web IDE</h2>
+	            <p>The environment itself runs directly in a browser, therefore does not require additional downloads and installations. It has a rich set of editors, wizards and viewers, and also supports debugging, operations and monitoring.</p>
 	        </div>
 	        <div class="col-lg-4 heading-lead">
 				<hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-	            <h2><i class="fa fa fa-bar-chart-o fa-fw"></i>
-                Statistics</h2>
-	            <p>Monitor the basic statistics such as Hit Count and Response time for the registered locations. Used Memory chart can give an overview about the load of the instance.</p>
+	            <h2><i class="fa fa fa-mobile fa-fw"></i>
+                Light IDE</h2>
+	            <p>For quick fixes with simple source code editing and publishing capabilities, there is a lightweight development environment convenient even from mobile devices.</p>
 	        </div>
 	        <div class="col-lg-4 heading-lead">
 		<hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-	        <h2><i class="fa fa-film fa-fw"></i>
-                Logs</h2>
-	            <p>Inspect the applications logs directly from the specified server location.</p>
+	        <h2><i class="fa fa-desktop fa-fw"></i>
+                Desktop Eclipse</h2>
+	            <p>There is an update site with Eclipse based plugins convenient especially for 'Java-saurus' developers, who will never go to a Web IDE for theirs daily tasks.</p>
 	        </div>
 	    </div>
