--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/memory/memory.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/memory/memory.html
@@ -1,3 +1,9 @@
+<div class="row">
+	<div class="col-lg-12">
+    	<h1 class="page-header">Memory Statistics</h1>
+	</div>
+</div>
+
 <div>
 	<h2><span class="label label-default">Memory</span></h2>
 	<div id="memory-log"></div>
