--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/manage/manage.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/manage/manage.html
@@ -1,12 +1,12 @@
  
  	<div class="row">
 		<div class="col-lg-12">
-	    	<h1 class="page-header">Monitor</h1>
+	    	<h1 class="page-header">Manage</h1>
 		</div>
 	</div>
 
  
-    <div class="col-lg-4 col-md-6" ng-repeat="data in monitoringData">
+    <div class="col-lg-4 col-md-6" ng-repeat="data in manageData">
         <div class="panel panel-{{ data.color }}">
             <div class="panel-heading">
                 <div class="row">
@@ -33,22 +33,22 @@
 	        <div class="col-lg-4 heading-lead page-scroll">
 				<hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-	            <h2><i class="fa fa-wrench fa-fw"></i>
-                Manage Location</h2>
-	            <p>Register the locations to which the statistics shall be collected.</p>
+	            <h2><i class="fa fa-truck fa-fw"></i>
+                Import and Export Content</h2>
+	            <p>Import and Export the public artifacts from the Registry. Import Content service provide the end-point for importing public registry content from another instance. Export Content service helps in exporting the content of the public registry as a zip file ready for further import.</p>
 	        </div>
 	        <div class="col-lg-4 heading-lead">
 				<hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-	            <h2><i class="fa fa fa-bar-chart-o fa-fw"></i>
-                Statistics</h2>
-	            <p>Monitor the basic statistics such as Hit Count and Response time for the registered locations. Used Memory chart can give an overview about the load of the instance.</p>
+	            <h2><i class="fa fa fa-toggle-on fa-fw"></i>
+                Clone Instances</h2>
+	            <p>Import and Export the whole Repository content including the Users Workspaces and Configurations. Clone Import service provide the end-point for importing cloned content from another instance. Clone Export service helps in exporting the content of the whole repository as a zip file ready for further import.</p>
 	        </div>
 	        <div class="col-lg-4 heading-lead">
 		<hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-	        <h2><i class="fa fa-film fa-fw"></i>
-                Logs</h2>
-	            <p>Inspect the applications logs directly from the specified server location.</p>
+	        <h2><i class="fa fa-sign-in fa-fw"></i>
+                Import Projects</h2>
+	            <p>Import Project service provide the end-point for importing project content in design time format (source). This is useful for constructing a PROD instance (consisting only of Runtime components) by importing one or many ready to use source projects.</p>
 	        </div>
 	    </div>
