--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/acclog/acclog.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/acclog/acclog.html
@@ -1,3 +1,9 @@
+<div class="row">
+	<div class="col-lg-12">
+    	<h1 class="page-header">Access Log</h1>
+	</div>
+</div>
+
 <table class="table table-striped">
 	<thead>
 		<tr>
