--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/response/response.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/response/response.html
@@ -1,3 +1,9 @@
+<div class="row">
+	<div class="col-lg-12">
+    	<h1 class="page-header">Response Statistics</h1>
+	</div>
+</div>
+
 <link rel="stylesheet" type="text/css" href="templates/monitoring/hits/graphics.css" />
 <div>
 	<h2><span class="label label-default">Response Time per URI</span></h2>
