--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/scripting/groovy/groovy.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/scripting/groovy/groovy.html
@@ -1,1 +1,7 @@
+<div class="row">
+	<div class="col-lg-12">
+    	<h1 class="page-header">Groovy Endpoints</h1>
+	</div>
+</div>
+
 <div id="content" ng-include="'templates/default.html'"></div>
