--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/workspace/workspace.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/workspace/workspace.html
@@ -1,3 +1,9 @@
+<div class="row">
+	<div class="col-lg-12">
+    	<h1 class="page-header">Workspace</h1>
+	</div>
+</div>
+
 <style>
 	#editor {
 		border: 1px solid #ddd;
@@ -46,8 +52,8 @@
     	<div class="col-xs-18" ng-show="editor != null">
 	    	<div>
 	    		<div id="editor-toolbar">
-					<button type="button" class="btn btn-success" ng-click="saveCalled()"><span class="glyphicon glyphicon-floppy-save"></span> Save</button>
-					<button type="button" class="btn btn-info" ng-click="publishCalled()"><span class="glyphicon glyphicon-play-circle"></span> Publish</button>
+					<button type="button" class="btn btn-success" ng-click="saveCalled()"><span class="fa fa-floppy-o"></span> Save</button>
+					<button type="button" class="btn btn-info" ng-click="publishCalled()"><span class="fa fa-play-circle"></span> Publish</button>
 					<button type="button" class="btn" ng-click="toggleFullscreen()" data-toggle="collapse" data-target="#left" style="float:right"><i ng-class="isFullscreen?'fa fa-compress':'fa fa-expand'"></i></button>
 					
 					<span ng-hide="isDirty">{{ path.replace("/workspace", "") }}</span>
