replace 'manage' with 'operate'

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/operate/operate.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/operate/operate.html
@@ -1,12 +1,12 @@
  
  	<div class="row">
 		<div class="col-lg-12">
-	    	<h1 class="page-header">Manage</h1>
+	    	<h1 class="page-header">Operate</h1>
 		</div>
 	</div>
 
  
-    <div class="col-lg-4 col-md-6" ng-repeat="data in manageData">
+    <div class="col-lg-4 col-md-6" ng-repeat="data in operateData">
         <div class="panel panel-{{ data.color }}">
             <div class="panel-heading">
                 <div class="row">
