--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/home.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/home.html
@@ -1,7 +1,7 @@
  
  	<div class="row">
 		<div class="col-lg-12">
-	    	<h1 class="page-header">Forebridge</h1>
+	    	<h1 class="page-header">Cockpit</h1>
 		</div>
 	</div>
 
