--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/web_content_for_entity/display_single_entity/ui-for-display-single-entity.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/web_content_for_entity/display_single_entity/ui-for-display-single-entity.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  ng-app="page">
+<html lang="en" ng-app="page">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,15 +9,19 @@
 
 <title>${pageTitle}</title>
 
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular.min.js"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular-resource.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular-resource.min.js"></script>
 </head>
 <body>
+<div ng-include="'header.html'"></div>
+
 	<div id="wrap" ng-controller="DisplayController">
+		<div class="row">
+			<div class="col-lg-12">
+		    	<h1 class="page-header">${pageTitle}</h1>
+			</div>
+		</div>
 		<div class="container well">
             <div ng-show="urlParameter">
                 <div ng-show="exist">
@@ -94,6 +98,31 @@
   			$scope.format = $scope.formats[0];
 		});
 	</script>
-
+	<!-- Bootstrap core JavaScript
+	  ================================================== -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script>
+	  $( document ).ready(function() {
+	    $\.getJSON("main.menu", function(data) {
+			$\.each(data, function(i, item) {
+				var itemContent = "";
+				if (item.subMenu.length > 0) {
+					itemContent += "<li class=\"dropdown\"><a href=\"#\" class=\"dropdown-toggle\" data-toggle=\"dropdown\">" + item.name + " <b class=\"caret\"></b></a>";
+					itemContent += "<ul class=\"dropdown-menu\">";
+					$\.each(item.subMenu, function(j, subitem) {
+						itemContent += "<li><a href=\"" + subitem.link + "\" >" + subitem.name + "</a></li>";
+					});
+					itemContent += "</ul>";
+				} else {
+					itemContent += "<li><a href=\"" + item.link + "\" >" + item.name + "</a>";
+				}
+				itemContent += "</li>";
+				$("#main-menu").append(itemContent);
+			});
+		});
+	  });
+	</script>
+<div ng-include="'footer.html'"></div>
 </body>
 </html>
