--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/web_content_for_entity/list_and_details/ui-for-entity-list-and-details.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/web_content_for_entity/list_and_details/ui-for-entity-list-and-details.html
@@ -13,7 +13,14 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 </head>
 <body>
+<div ng-include="'header.html'"></div>
+
 	<div id="wrap" ng-controller="ListAndDetailsController">
+		<div class="row">
+			<div class="col-lg-12">
+		    	<h1 class="page-header">${pageTitle}</h1>
+			</div>
+		</div>
 		<div class="container">
 			<table class="table table-condensed table-striped table-hover">
 				<thead>
@@ -98,6 +105,31 @@
   			$scope.format = $scope.formats[0];
 		});
 	</script>
+		  ================================================== -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script>
+	  $( document ).ready(function() {
+	    $\.getJSON("main.menu", function(data) {
+			$\.each(data, function(i, item) {
+				var itemContent = "";
+				if (item.subMenu.length > 0) {
+					itemContent += "<li class=\"dropdown\"><a href=\"#\" class=\"dropdown-toggle\" data-toggle=\"dropdown\">" + item.name + " <b class=\"caret\"></b></a>";
+					itemContent += "<ul class=\"dropdown-menu\">";
+					$\.each(item.subMenu, function(j, subitem) {
+						itemContent += "<li><a href=\"" + subitem.link + "\" >" + subitem.name + "</a></li>";
+					});
+					itemContent += "</ul>";
+				} else {
+					itemContent += "<li><a href=\"" + item.link + "\" >" + item.name + "</a>";
+				}
+				itemContent += "</li>";
+				$("#main-menu").append(itemContent);
+			});
+		});
+	  });
+	</script>
 
+<div ng-include="'footer.html'"></div>
 </body>
 </html>
